Fixed z-index bug on welcome page

--- a/app/static/pi_display.css
+++ b/app/static/pi_display.css
@@ -4,6 +4,6 @@ body {
 }
 
 .container {
-    width: 320px;
-    height: 240px;
+    width: 480px;
+    height: 320px;
 }
