--- a/app/static/production/main.css
+++ b/app/static/production/main.css
@@ -2455,6 +2455,8 @@ body {
 }
 
 #contact-icons {
+	position: relative;
+	z-index: 1;
 	margin: 0 auto;
 	min-height: 3em;
 	max-width: 625px;
